first mayor version ATP dto campaign